# document-qa-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  document-qa-prd.md  pyproject.toml
.scratch/issues/: 01-bootstrap-fastapi.md  02-upload-documents.md  03-parse-and-chunk.md  04-vector-store.md  05-delete-documents.md  06-chat-single-turn.md  07-conversation-history.md  08-real-provider-config.md  09-package-and-document.md  10-stretch-pdf.md  11-stretch-docx.md  12-stretch-web-ui.md
docs/: api.md  architecture.md  user-guide.md
docs/agents/: issue-tracker.md
src/document_qa/: __init__.py  main.py
src/document_qa/api/routes/: chat.py  conversations.py  documents.py  health.py
src/document_qa/core/: config.py
src/document_qa/documents/: __init__.py  chunking.py  models.py  parser.py  service.py
src/document_qa/persistence/: conversations.py  documents.py  qa_logs.py
src/document_qa/qa/: __init__.py  models.py  provider.py  service.py
src/document_qa/retrieval/: __init__.py  vector_store.py
src/document_qa/web/: app.js  index.html  styles.css
tests/: test_config.py  test_conversations.py  test_document_parser.py  test_documents_api.py  test_health.py  test_provider_config.py  test_qa_logs.py  test_qa_service.py  test_text_chunker.py  test_vector_store.py  test_web_ui.py
