[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "document-qa-system"
version = "0.1.0"
description = "FastAPI backend for an AI-powered document question answering system."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "openai>=1.30,<2.0",
    "pypdf>=4.0,<7.0",
    "python-docx>=1.1,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "reportlab>=4.0,<5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
document_qa = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
